логіка роботи з умовним блоком